--- a/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
+++ b/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
+AntiSpamFilterProblem & \cellcolor{gray95}$  2.00e-01_{ 1.4e-01}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
+AntiSpamFilterProblem & \cellcolor{gray95}$  1.67e-01_{ 2.5e-01}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
