--- a/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
+++ b/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  2.67e-01_{ 1.7e-01}$ \\
+AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ AntiSpamFilterProblem & \cellcolor{gray95}$  2.67e-01_{ 1.7e-01}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  3.33e-01_{ 2.8e-01}$ \\
+AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
